deleted -XX:+EnableDynamicAgentLoading